[gd_scene load_steps=8 format=3 uid="uid://cu5jy6ihbkhxs"]

[ext_resource type="Script" uid="uid://e7uejh555j4s" path="res://scenes/ui/ability_upgrade_card/ability_upgrade_card.gd" id="1_8ur3e"]

[sub_resource type="Animation" id="Animation_3kgse"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ReferenceRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6uaja"]
resource_name = "default"
length = 2.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ReferenceRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.172549, 0.796078, 0.662745, 1), Color(0.768627, 0.796078, 0.172549, 1), Color(1, 0.698039, 0, 1), Color(1, 0.305882, 0.305882, 1), Color(0.807843, 0.117647, 1, 1), Color(0.172549, 0.796078, 0.662745, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nnc20"]
_data = {
&"RESET": SubResource("Animation_3kgse"),
&"default": SubResource("Animation_6uaja")
}

[sub_resource type="Animation" id="Animation_p84sm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/NewLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nnc20"]
resource_name = "new_label_default"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/NewLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.172549, 0.796078, 0.662745, 1), Color(0.768627, 0.796078, 0.172549, 1), Color(1, 0.698039, 0, 1), Color(1, 0.305882, 0.305882, 1), Color(0.807843, 0.117647, 1, 1), Color(0.172549, 0.796078, 0.662745, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_na15a"]
_data = {
&"RESET": SubResource("Animation_p84sm"),
&"new_label_default": SubResource("Animation_nnc20")
}

[node name="AbilityUpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(140, 150)
offset_right = 153.0
offset_bottom = 176.0
focus_mode = 2
script = ExtResource("1_8ur3e")

[node name="RefRectAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nnc20")
}
autoplay = "default"

[node name="NewLabelAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_na15a")
}
autoplay = "new_label_default"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 1
theme_type_variation = &"AlternativePanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer2/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 3
stretch_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"AlternativePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
mouse_filter = 1
text = "Teste"
horizontal_alignment = 1
autowrap_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(123, 67)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 6
mouse_filter = 1
theme_override_constants/line_spacing = 1
text = "Escrevendo alguma descricao de teste para ver como isso esta se comportando. Ate agora tudo bem."
horizontal_alignment = 1
autowrap_mode = 2

[node name="NewLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(123, 10)
layout_mode = 2
size_flags_vertical = 8
text = "NEW"
horizontal_alignment = 1

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 2
mouse_filter = 2
border_color = Color(1, 1, 1, 1)
border_width = 2.0
editor_only = false
